added photo uploading functionality

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -231,12 +231,12 @@
                   <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
                     <div class="resume-item">
                       <h4>Name</h4>
-                      <input class="form-control" id="namePlace" disabled>
+                      <input class="form-control" id="namePlace" disabled name="rno">
                     </div>
                   </div>
                   
                   <div id="addNew">
-                    {{form}}
+                    {{form.as_p}}
                   </div>
                   <br>
                   <div id="upload">
