--- a/app/templates/app/test.html
+++ b/app/templates/app/test.html
@@ -1,106 +1,1 @@
-
-<style>
-  .styled-table {
-    border-collapse: collapse;
-    margin: 25px 0;
-    font-size: x-small;
-    font-family: sans-serif;
-    /* min-width: 400px; */
-    width: 100%;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-  }
-
-  .hell{
-    color:red;
-  }
-
-  .styled-table thead tr {
-    background-color: #009879;
-    color: #ffffff;
-    text-align: left;
-  }
-
-  .styled-table th, .styled-table td {
-    padding: 6px 9px;
-  }
-
-  .styled-table tbody tr {
-      border-bottom: 1px solid #dddddd;
-  }
-
-  .styled-table tbody tr:nth-of-type(even) {
-      background-color: #f3f3f3;
-  }
-
-  .styled-table tbody tr:last-of-type {
-      border-bottom: 2px solid #009879;
-  }
-
-  #table4 tr:not(:first-child):hover, #table2 tr:not(:first-child):hover{
-    background-color: #ddd;
-  }
-</style>
-
-<div >
-  hey
-<table class="styled-table" id="table4"></table>
-
-</div>
-
-
-<script type="text/javascript" src="https://d3js.org/d3.v3.min.js"></script>
-
-
-
-<script>
-  var dataForJS = JSON.parse("{{lol2|escapejs}}");
-  function createTable(){
-    console.log(dataForJS);
-    let table = document.createElement('table');
-    let thead = document.createElement('thead');
-    let tbody = document.createElement('tbody');
-
-
-    table.appendChild(thead);
-    table.appendChild(tbody);
-
-    // Adding the entire table to the body tag
-    document.getElementById('table4').appendChild(table);
-
-    let row_1 = document.createElement('tr');
-    let heading_1 = document.createElement('th');
-    heading_1.innerHTML = "Sr. No.";
-    let heading_2 = document.createElement('th');
-    heading_2.innerHTML = "Name";
-    let heading_3 = document.createElement('th');
-    heading_3.innerHTML = "Company";
-
-    row_1.appendChild(heading_1);
-    row_1.appendChild(heading_2);
-    row_1.appendChild(heading_3);
-    thead.appendChild(row_1);
-
-    for(var i=0;i<dataForJS.length;i++){
-      let row_2 = document.createElement('tr');
-      let row_2_data_1 = document.createElement('td');
-      row_2_data_1.innerHTML = dataForJS[i]["date"];
-      let row_2_data_2 = document.createElement('td');
-      row_2_data_2.innerHTML = dataForJS[i]["close"];
-      if(dataForJS[i]["close"]==45) row_2_data_2.className = "hell";
-      let row_2_data_3 = document.createElement('td');
-      row_2_data_3.innerHTML = "Netflix";
-
-      row_2.appendChild(row_2_data_1);
-      row_2.appendChild(row_2_data_2);
-      row_2.appendChild(row_2_data_3);
-      tbody.appendChild(row_2);
-    }
-  }
-
-  // <td {% if not gg.db %} id='notInDb' {% endif %} >{{ gg.rno }}</td>
-  //                   <td>{{ gg.name }}</td>
-  //                   <td  {% if gg.attendance == 'Absent' %} class='absent' {% endif %} >{{ gg.attendance }}</td>
-
-  createTable()
-  </script>
-  
+lol
