--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -156,7 +156,7 @@
           <li><a href="#skills" class="nav-link scrollto"><i class="bx bx-user"></i> <span>Attendance</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Add student</span></a></li>
           <hr style="color:white; width:100%;">
-          <li><a href="" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Database</span></a></li>
+          <li><a href="{% url 'dataBase' %}" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Database</span></a></li>
           <li><a href="{% url 'logout' %}" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Log-Out</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
